# pgspecial

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  DEVELOP.rst  MANIFEST.in  README.rst  changelog.rst  dbcommands.sql  docker-compose.yml  pyproject.toml  release.py  requirements-dev.txt  run_test_matrix.sh  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
pgspecial/: __init__.py  dbcommands.py  iocommands.py  main.py  namedqueries.py
pgspecial/sql/: dbcommands.sql
scripts/: README.rst  docparser.py
tests/: conftest.py  dbutils.py  pytest.ini  test_internal.py  test_named_queries.py  test_specials.py
